<resources>
    <!--
    🌱 Emojis are added to make finding references easier. Subsections are for specific strings to that point, and strings set
    directly above do not have a specific correlation, or belong to many sections as a whole.

    As for naming conventions, prefixing should be followed by a shortened version of what the msg is
    (i.e. "btn_waste_food")

    prefixes:
    app -> referring to the entire app itself (no need to use)
    fragment -> referring anything to do with fragments (unlikely used)
    msg -> any message/related text
    msg_..._sub -> any subtitle of a main msg/title
    btn -> any string related to a button/image buttons
    item -> any string related to a RecyclerView followed by their naming set (i.e. if recyclerview has 2 instance, name first set at the back with _1 and the 2nd set _2)
    img -> any string related to images (non-clickable.. usually wont be used since decorative images will have @null as ctDesc)
    edt -> any hints/string related to edittext fields
    test -> any strings used for easier testing (i.e. instant email/password input)


    Rename/refactor using Shift+F6 if named wrongly
    -->
    <string name="app_name">WasteLess</string>
    <string name="app_catchphrase">Waste less. Care more.</string>
    <string name="fragment_title">Fragment Title</string>
    <!-- Fragment Titles -->
    <string name="title_home">Home</string>
    <string name="title_diary">Diary</string>
    <string name="title_account">Account</string>
    <string name="title_tamagotchi">Tamagotchi</string>
    <string name="title_logging">Logging</string>
    <string name="title_sign_in_selection">Sign In Selection</string>
    <string name="title_login">Log In</string>
    <string name="title_sign_up">Sign Up</string>
    <string name="title_forgot_password">Forgot Password</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="title_loading">Loading</string>
    <string name="title_change_username">Change Username</string>
    <string name="title_change_password">Change Password</string>
    <string name="title_delete_account">Delete Account</string>

    <!-- RecyclerView Content -->
    <string name="img_food_waste">Food waste</string>
    <string name="item_diary_waste_type_1">Unavoidable</string>
    <string name="item_diary_date_1">recorded on 11/09/2025</string>
    <string name="item_diary_title_1">Rice Leftovers</string>
    <string name="item_diary_weight_1">350g</string>

    <!-- 🛑 Login/Sign-up Fragment -->
    <string name="edt_email">Email</string>
    <string name="edt_password">Password</string>
    <string name="edt_username">Username</string>
    <string name="edt_confirm_password">Confirm Password</string>
    <string name="get_started">Get started!</string>
    <string name="i_already_have_an_account">I already have an account</string>
    <!-- buttons -->
    <string name="btn_login">LOG IN</string>
    <string name="btn_sign_up">SIGN UP</string>
    <string name="btn_forgot_password">Forgot password?</string>
    <!-- Login/Sign-up: test credentials-->
    <string name="test_email">testuser@uni.edu</string>
    <string name="test_password">123456</string>

    <!-- 🏠 Home Fragment -->
    <string name="msg_greeting_sub">Ready for the big reveal?</string>
    <string name="msg_today_diary">Today\'s Diary</string>
    <string name="msg_today_diary_sub">How is your Wasteless journey going?</string>
    <string name="msg_top_weekly_waste">Top weekly waste</string>
    <string name="msg_not_found">No available logs found</string>
    <string name="msg_your_analytics">Your analytics</string>
    <string name="msg_your_analytics_sub">Are you the last in food wasting yet?</string>
    <!-- buttons -->
    <string name="btn_visit_tamagotchi">Visit Tamagotchi</string>
    <string name="btn_log_your_waste">Log your waste</string>
    <string name="btn_go_to_diary">Go To Diary</string>

    <!-- 📸 Logging Fragment -->
    <string name="btn_take_photo">Take photo</string>
    <string name="msg_date">Date</string>
    <string name="msg_title">Title</string>
    <string name="msg_waste_type">Waste Type</string>
    <string name="msg_calculation">Calculation</string>
    <string name="msg_remarks">Remarks</string>
    <string name="weight_format">Weight: %.1f g</string>
    <!-- buttons -->
    <string name="btn_unavoidable">Unavoidable</string>
    <string name="btn_avoidable">Avoidable</string>
    <string name="btn_food_related">Food Related</string>
    <string name="btn_grams">Grams</string>
    <string name="btn_portions">Portions</string>
    <string name="btn_enter_here">Enter here</string>
    <string name="btn_select_date">Select date</string>
    <string name="btn_save">Save</string>
    <!-- Logging: toolbar -->
    <string name="msg_overlay_title">Overlay Title</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_done">Done!</string>
    <string name="item_waste_1">Fruit Seeds</string>
    <string name="btn_qty">Qty</string>

    <!-- 👤 Account Fragment -->
    <string name="btn_log_out">Log out</string>
    <string name="hello_user">Hello, user!</string>
    <string name="profile_picture">Profile picture</string>
    <string name="display_name">Display Name</string>

    <!-- Settings Fragment -->
    <!--    Profile edit strings -->
    <string name="back">Back</string>
    <string name="edt_change_password">Change Password</string>
    <string name="edt_new_password">New Password</string>
    <string name="edt_confirm_new_password">Re-type New Password</string>
    <string name="edt_current_password">Current Password</string>
    <string name="btn_save_password">Save Password</string>
    <string name="title_settings">Settings</string>
    <string name="btn_update_profile">Update</string>
    <string name="CONFIRM_DELETE">Type \'CONFIRM DELETE\' to confirm deletion of your account.</string>

    <!-- Tamagotchi Fragment -->
    <string name="virtual_pet_subtitle">Check on your pet!</string>
    <string name="virtual_pet_button">Go to Pet</string>

    <string name="tamagotchi_coins_icon">Coins icon</string>
    <string name="tamagotchi_coins_number">Coins: 120</string>
    <string name="tamagotchi_duck">Your pet duck</string>
    <string name="tamagotchi_name">Gilbert</string>
    <string name="tamagotchi_sentence">Quack quack!</string>
    <string name="tamagotchi_stat_health">Health</string>
    <string name="tamagotchi_stat_cleanliness">Cleanliness</string>
    <string name="tamagotchi_stat_mood">Mood</string>
    <string name="tamagotchi_action_feed">Feed</string>
    <string name="tamagotchi_action_clean">Clean</string>
    <string name="tamagotchi_action_play">Play</string>
    <string name="tamagotchi_action_gift">Gift</string>

    <!-- Forgot Password Fragment -->
    <string name="forgot_password_link_subtitle">Enter your email address to receive a link to reset your password.</string>
    <!-- buttons -->
    <string name="btn_submit">SUBMIT</string>
    <!-- New additions/not sorted yet -->

    <!-- Toast text -->
    <string name="success_forgot_password">If an account is associated with that email, a password reset link will be sent to it.</string>
    <string name="success_login">Login Success</string>
    <string name="success_account_created">Account created!</string>
    <string name="success_saved">Saved!</string>
    <string name="success_delete">Log deleted!</string>
    <string name="success_delete_account">Account and all related data deleted.</string>

    <string name="error_username_empty">Username cannot be empty</string>
    <string name="error_username_short">Username must be at least 3 characters</string>
    <string name="error_username_taken">Username is already taken</string>
    <string name="error_username_availability">Failed to authenticate username availability</string>
    <string name="error_email_empty">Email cannot be empty</string>
    <string name="error_email_invalid">Please enter a valid email address</string>
    <string name="error_password_empty">Password cannot be empty</string>
    <string name="error_password_length">Password must be between 8~64 characters</string>
    <string name="error_password_complexity">Password must contain at least 1 uppercase, lowercase, special character &amp; number</string>
    <string name="error_password_mismatch">Mismatching passwords, please check again.</string>
    <string name="error_delete">Failed to delete log.</string>
    <!-- firebase checks -->
    <string name="error_email_already_exists">An account with this email already exists.</string>
    <string name="error_password_weak">Password is too weak. Please use a stronger password.</string>
    <string name="error_email_malformed">The email address is badly formatted.</string>
    <string name="error_network">Network error. Please check your connection.</string>
    <string name="error_registration">Registration failed. Please try again.</string>
    <string name="error_login">Login failed. Please try again.</string>
    <string name="error_generic_fail">An error occurred. Please try again.</string>


    <string name="cancel_imagepicker">Image picking cancelled.</string>
    <string name="created_since">Since 12/12/1222</string>
    <string name="change_profile_subtitle">Click on the image to update profile picture!</string>
</resources>