<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/text_greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_user"
        android:textSize="37sp"
        style="@style/TitleNoFont_G2LG"
        android:layout_marginTop="16dp"
        android:includeFontPadding="false"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <!-- Subtitle -->
    <TextView
        android:id="@+id/text_greeting_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_greeting_sub"
        android:textSize="16sp"
        android:includeFontPadding="false"
        app:layout_constraintTop_toBottomOf="@id/text_greeting"
        app:layout_constraintStart_toStartOf="@id/text_greeting"/>

    <!-- Log Your Waste Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_logWaste"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_log_your_waste"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_rounded_rectangle"
        app:backgroundTint="?attr/colorSecondary"
        android:gravity="start|center_vertical"
        style="@style/TitleSBold_G2W"
        app:icon="@drawable/icon_duck_feet"
        app:iconSize="32dp"
        app:iconTint="?attr/colorSecondaryVariant"
        app:iconGravity="start"
        app:layout_constraintTop_toBottomOf="@id/text_greeting_subtitle"
        app:layout_constraintStart_toStartOf="@id/text_greeting_subtitle"/>

    <!-- Greeting Icon -->
    <ImageView
        android:id="@+id/image_homepageIcon"
        android:layout_width="155dp"
        android:layout_height="132dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/btn_visit_tamagotchi"
        android:scaleType="centerCrop"
        android:src="@drawable/icon_sitting_duck"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Today Diary Section -->
    <TextView
        android:id="@+id/text_homepage_diaryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_today_diary"
        style="@style/Title20SBold_G2LG"
        android:layout_marginTop="20dp"
        android:includeFontPadding="false"
        app:layout_constraintTop_toBottomOf="@id/button_logWaste"
        app:layout_constraintStart_toStartOf="@id/button_logWaste"/>

    <TextView
        android:id="@+id/text_homepage_diarySubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_today_diary_sub"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/text_homepage_diaryTitle"
        app:layout_constraintStart_toStartOf="@id/text_homepage_diaryTitle"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_homepage_diary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:overScrollMode="never"
        android:clipToPadding="false"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@id/text_homepage_diarySubtitle"
        app:layout_constraintStart_toStartOf="@id/text_homepage_diarySubtitle"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_diary_card"/>

    <!-- Analytics section -->
    <TextView
        android:id="@+id/text_homepage_analytics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_your_analytics"
        style="@style/Title20SBold_G2LG"
        android:layout_marginTop="20dp"
        android:includeFontPadding="false"
        app:layout_constraintTop_toBottomOf="@id/recycler_homepage_diary"
        app:layout_constraintStart_toStartOf="@id/recycler_homepage_diary"/>

    <TextView
        android:id="@+id/text_homepage_analytics_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_your_analytics_sub"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/text_homepage_analytics"
        app:layout_constraintStart_toStartOf="@id/text_homepage_analytics_subtitle"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_homepage_analytics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:overScrollMode="never"
        android:clipToPadding="false"
        app:layout_constraintTop_toBottomOf="@id/text_homepage_analytics_subtitle"
        app:layout_constraintStart_toStartOf="@id/text_homepage_analytics_subtitle"
        tools:listitem="@layout/item_graph_card"/>

</androidx.constraintlayout.widget.ConstraintLayout>