<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.login.ForgotPasswordFragment">

    <ImageButton
        android:id="@+id/toolbar_no"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_close_24px"
        android:scaleType="fitCenter"
        android:background="?android:selectableItemBackgroundBorderless"
        android:contentDescription="@string/btn_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?attr/colorOnSecondary" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_forgot_password"
        style="@style/Title20Medium_NoColor"
        android:textSize="30sp"
        android:padding="10dp"
        android:gravity="start|center"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/toolbar_no"
        app:layout_constraintStart_toStartOf="parent"/>

    <!-- Username -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_layout_email_forgot"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@null"
        app:boxBackgroundMode="filled"
        app:boxBackgroundColor="?attr/colorSurfaceVariant"
        app:layout_constraintTop_toBottomOf="@id/forgot_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edt_email"
            style="@style/TitleRegular_White"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgot_password_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_link_subtitle"
        style="@style/Title20Medium_NoColor"
        android:textSize="20sp"
        android:padding="10dp"
        android:gravity="start|center"
        app:layout_constraintTop_toBottomOf="@id/text_layout_email_forgot"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/button_submit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginTop="15dp"
        android:includeFontPadding="false"
        style="@style/Title20SBold_White"
        android:background="@drawable/shape_rounded_rectangle"
        app:backgroundTint="?attr/colorPrimaryVariant"
        android:text="@string/btn_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_password_details" />

</androidx.constraintlayout.widget.ConstraintLayout>